2008-10-23  Thomas Thurman  <tthurman@gnome.org>

        Support _NET_WM_STATE_STICKY (i.e. allow third-party apps to decide
        whether a window is on all workspaces).  Bug found by Ka-Hing
        Cheung.  Closes #557536.

        * src/core/window.c (set_net_wm_state): report it
        * src/core/window.c (meta_window_client_message): set sticky
          if we receive it
        * src/core/window-props.c: set sticky if we find it
        * src/core/atomnames.h: add _NET_WM_STATE_STICKY

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * src/core/schema-bindings.c: support builds outside tree properly.
	* src/Makefile.am: ditto.
	* po/POTFILES.skip: ditto.

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.3 release.

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: bump to 2.25.3 (thought the release script
          had already done this)

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        Fixes to make distcheck work again.

        * src/Makefile.am: include *-binding.h, and make the schema
          building work when builddir != srcdir
        * po/POTFILES.in (src/core/keybindings.): include *-binding.h

2008-10-22  Götz Waschk  <waschk@mandriva.org>

        * configure.in: add libm reference.  Closes #557357.

2008-10-22  Murray Cumming  <murrayc@murrayc.com>

	* doc/creating_themes/C/creating_metacity_themes.xml:
	Fixed various tags to make this validate.
	Bug #557337

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.2 release.

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.2 release.

2008-10-22  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.2 release.

2008-10-22  Joe Marcus Clarke  <marcus@freebsd.org>

        * src/core/main.c (meta_finalize, sigterm_handler): new functions
        * src/core/main.c (main): add sigterm_handler in case we receive
          a SIGTERM.  Closes #553980.
